--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ authors = ["Kmoneal <kmacjoneal@gmail.com>"]
 [dependencies]
 diesel = { version = "1.0.0", features = ["mysql"] }
 dotenv = "0.9.0"
-web3 = "0.1.0"
+web3 = {version = "0.2.0", path = "/home/kenan/Documents/rust-web3"}
 tiny-keccak = "1.3"
+rustc-hex = "1.0.0"
